# Open-AD-Model-Service

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  publish-lock.sh  pyproject.toml
.github/workflows/: publish.yml
gt4sd/gt4sd_guacamol/: pyproject.toml
gt4sd/gt4sd_guacamol/gt4sd_inference_guacamol/algorithms/conditional_generation/guacamol/: core.py
gt4sd/gt4sd_moler/: pyproject.toml
gt4sd/gt4sd_moler/gt4sd_inference_moler/algorithms/generation/moler/: __init__.py
gt4sd/gt4sd_torch/: pyproject.toml
gt4sd/gt4sd_torch/gt4sd_inference_torch_drug/algorithms/generation/torchdrug/: __init__.py  core.py  implementation.py
gt4sd/gt4sd_torch/gt4sd_inference_torch_drug/training_pipelines/torchdrug/gcpn/: core.py
openad-model-inference/gt4sd_common/: pyproject.toml
openad-model-inference/gt4sd_common/gt4sd_common/: configuration.py  s3.py  s3old.py
openad-model-inference/gt4sd_common/gt4sd_common/algorithms/: __init__.py  core.py  registry.py
openad-model-inference/gt4sd_common/gt4sd_common/algorithms/conditional_generation/molgx/: __init__.py
openad-model-inference/gt4sd_common/gt4sd_common/algorithms/conditional_generation/paccmann_rl/: core.py  implementation.py
openad-model-inference/gt4sd_common/gt4sd_common/algorithms/controlled_sampling/advanced_manufacturing/: core.py
openad-model-inference/gt4sd_common/gt4sd_common/algorithms/controlled_sampling/paccmann_gp/: implementation.py
openad-model-inference/gt4sd_common/gt4sd_common/cli/: algorithms.py  argument_parser.py  hf_to_st_converter.py  inference.py  saving.py  trainer.py  upload.py
openad-model-inference/gt4sd_common/gt4sd_common/domains/materials/: protein_encoding.py
openad-model-inference/gt4sd_common/gt4sd_common/extras/: __init__.py
openad-model-inference/gt4sd_common/gt4sd_common/frameworks/cgcnn/: data.py
openad-model-inference/gt4sd_common/gt4sd_common/frameworks/crystals_rfc/: feature_engine.py  rf_classifier.py
openad-model-inference/gt4sd_common/gt4sd_common/frameworks/enzeptional/: optimization.py  processing.py
openad-model-inference/gt4sd_common/gt4sd_common/frameworks/gflownet/arg_parser/: parser.py
openad-model-inference/gt4sd_common/gt4sd_common/frameworks/gflownet/dataloader/: data_module.py  dataset.py  sampler.py
openad-model-inference/gt4sd_common/gt4sd_common/frameworks/gflownet/envs/: __init__.py  mol_building_env.py
openad-model-inference/gt4sd_common/gt4sd_common/frameworks/gflownet/ml/: module.py
openad-model-inference/gt4sd_common/gt4sd_common/frameworks/gflownet/tests/: qm9.py  test_gfn.py
openad-model-inference/gt4sd_common/gt4sd_common/frameworks/gflownet/train/: core.py
openad-model-inference/gt4sd_common/gt4sd_common/frameworks/granular/arg_parser/: parser.py
openad-model-inference/gt4sd_common/gt4sd_common/frameworks/granular/dataloader/: data_module.py  dataset.py
openad-model-inference/gt4sd_common/gt4sd_common/frameworks/granular/ml/: module.py
openad-model-inference/gt4sd_common/gt4sd_common/frameworks/granular/tests/: test_tokenizer.py
openad-model-inference/gt4sd_common/gt4sd_common/frameworks/granular/train/: core.py
openad-model-inference/gt4sd_common/gt4sd_common/frameworks/torch/: __init__.py
openad-model-inference/gt4sd_common/gt4sd_common/properties/: __init__.py  core.py  scorer.py  utils.py
openad-model-inference/gt4sd_common/gt4sd_common/properties/crystals/: __init__.py  core.py
openad-model-inference/gt4sd_common/gt4sd_common/properties/molecules/: __init__.py  core.py  functions.py
openad-model-inference/gt4sd_common/gt4sd_common/properties/proteins/: core.py  functions.py
openad-model-inference/gt4sd_common/gt4sd_common/properties/scores/: core.py
openad-model-inference/gt4sd_common/gt4sd_common/properties/tests/: test_properties.py  test_properties_scorer.py
openad-model-inference/gt4sd_common/gt4sd_common/tests/: test_configuration.py  test_s3.py  utils.py
openad-model-inference/gt4sd_common/gt4sd_common/training_pipelines/pytorch_lightning/granular/: core.py
openad-model-inference/gt4sd_common/gt4sd_common/training_pipelines/pytorch_lightning/molformer/: core.py
openad-model-inference/gt4sd_guacamol/: pyproject.toml  test.py
openad-model-inference/gt4sd_guacamol/gt4sd_inference_guacamol/algorithms/conditional_generation/guacamol/: core.py
openad-model-inference/gt4sd_guacamol/gt4sd_inference_guacamol/training_pipelines/: __init__.py
openad-model-inference/gt4sd_guacamol/gt4sd_inference_guacamol/training_pipelines/guacamol_baselines/smiles_lstm/: core.py
openad-model-inference/gt4sd_inference_all/: discovery-demo.ipynb  pyproject.toml
openad-model-inference/gt4sd_moler/: pyproject.toml
openad-model-inference/gt4sd_paccmann/: pyproject.toml  test_all_properties.py
openad-model-inference/gt4sd_regression/: example.py  example_light.py  pyproject.toml  regression-transformer-demo.ipynb
openad-model-inference/gt4sd_regression/gt4sd_inference_regression/algorithms/: NA_REMOVE.registry.py  NA_REMOVE_core.py  REPLACE__init__.py
openad-model-inference/gt4sd_regression/gt4sd_inference_regression/training_pipelines/: __init__.py
openad-model-inference/gt4sd_regression/gt4sd_inference_regression/training_pipelines/regression_transformer/: core.py  implementation.py  utils.py
openad-model-inference/gt4sd_regression/gt4sd_inference_regression/training_pipelines/tests/: molecules.csv  molecules.smiles  test_training_regression_transformer.py
openad-model-inference/gt4sd_reinvent/: pyproject.toml
openad-model-inference/gt4sd_reinvent/gt4sd_inference_reinvent/algorithms/tests/: test_registry.py
openad-model-inference/gt4sd_torch/: pyproject.toml
openad-model-inference/gt4sd_torch/gt4sd_inference_torch_drug/training_pipelines/: __init__.py  mock_training_pipeline.json  terminator_training.json
openad-model-inference/gt4sd_torch/gt4sd_inference_torch_drug/training_pipelines/torchdrug/: core.py  unpatch.py
openad_model_inference/gt4sd_moler/: pyproject.toml
openad_model_inference/gt4sd_paccmann/: pyproject.toml  test_all_properties.py
(+144 files in other folders)
