[tool.poetry]
name = "openad-model-inference"
version = "0.1.0"
license="MIT"
description = "Openad_model_Service"
authors = ["Daniel Choi <choi@ibm.com>", "Phil Downey <Phil.Downey1@ibm.com>", "Brian Duenas <Brian.Duenas@ibm.com>"]
readme = "README.md"
# package-mode = false


[tool.poetry.dependencies]
python = ">=3.9,<3.11"
gt4sd_common = { path = "openad-model-inference/gt4sd_common", optional = false}
gt4sd_inference_reinvent = { path = "openad-model-inference/gt4sd_reinvent", optional = true}
gt4sd_inference_torch_drug = { path = "openad-model-inference/gt4sd_torch", optional = true}
gt4sd_inference_guacamol = { path = "openad-model-inference/gt4sd_guacamol", optional = true}
gt4sd_inference_moler = { path = "openad-model-inference/gt4sd_moler", optional = true}
gt4sd_inference_paccmann = { path = "openad-model-inference/gt4sd_paccmann", optional = true}
gt4sd_inference_regression = { path = "openad-model-inference/gt4sd_regression", optional = true}


[tool.poetry.extras]
reinvent = ["gt4sd_inference_reinvent"]
torch_drug = ["gt4sd_inference_torch_drug"]
guacamol = ["gt4sd_inference_guacamol"]
moler = ["gt4sd_inference_moler"]
paccmann = ["gt4sd_inference_paccmann", "gt4sd_inference_guacamol"]
regression = ["gt4sd_inference_regression"]
all = ["gt4sd_inference_reinvent", "gt4sd_inference_torch_drug", "gt4sd_inference_guacamol", "gt4sd_inference_moler", "gt4sd_inference_paccmann", "gt4sd_inference_regression"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
fix = true
line-length = 120
target-version = "py310"
show-fixes = true


[tool.ruff.lint]
ignore = [
    "E722", # Do not use bare `except`
    "F401", # imported but unused
    "E402", # gt4sd top level submodule
]
