[tool.poetry]
name = "gt4sd_inference_torch_drug"
version = "0.1.0"
license="MIT"
description = "gt4sd Inference for paccmannrl prediction"
authors = ["Daniel Choi <choi@ibm.com>", "Phil Downey <Phil.Downey1@ibm.com>", "Brian Duenas <Brian.Duenas@ibm.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9,<3.11"

gt4sd_common = { git = "https://github.com/acceleratedscience/Open-AD-Model-Service", subdirectory = "gt4sd/gt4sd_common", branch = "gt4sd" }

#torch = "^1.7.1"
#torch = "^2.2.1"
torch = [
  {url = "https://download.pytorch.org/whl/cu118/torch-2.2.1%2Bcu118-cp310-cp310-linux_x86_64.whl" , platform = "linux"},
  {url = "https://download.pytorch.org/whl/cpu/torch-2.2.1%2Bcpu-cp310-cp310-win_amd64.whl" , platform = "win32" },
  {url = "https://download.pytorch.org/whl/cpu/torch-2.2.1-cp310-none-macosx_10_9_x86_64.whl" , platform = "darwin" }
]
torch-scatter = [
  {url = "https://data.pyg.org/whl/torch-2.2.0%2Bcu118/torch_scatter-2.1.2%2Bpt22cu118-cp310-cp310-linux_x86_64.whl" , platform = "linux"},
  {url = "https://data.pyg.org/whl/torch-2.2.0%2Bcu118/torch_scatter-2.1.2%2Bpt22cu118-cp310-cp310-win_amd64.whl" , platform = "win32" },
  {url = "https://data.pyg.org/whl/torch-2.2.0%2Bcpu/torch_scatter-2.1.2-cp310-cp310-macosx_11_0_x86_64.whl" , platform = "darwin" }
]
torch-cluster = [
  {url = "https://data.pyg.org/whl/torch-2.2.0%2Bcu118/torch_cluster-1.6.3%2Bpt22cu118-cp310-cp310-linux_x86_64.whl", platform = "linux"},
  {url = "https://data.pyg.org/whl/torch-2.2.0%2Bcu118/torch_cluster-1.6.3%2Bpt22cu118-cp310-cp310-win_amd64.whl" , platform = "win32" },
  {url = "https://data.pyg.org/whl/torch-2.2.0%2Bcpu/torch_cluster-1.6.3-cp310-cp310-macosx_11_0_x86_64.whl", platform = "darwin" }
]
torch-geometric = "2.5"
torchdrug = ">=0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.0.2"
pyright = "^1.1.352"
python-lsp-server = {extras = ["all"], version = "^1.10.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
