[tool.poetry]
name = "gt4sd_inference_regression"
version = "0.1.0"
license="MIT"
description = "gt4sd Inference for regression"
authors = ["Daniel Choi <choi@ibm.com>", "Phil Downey <Phil.Downey1@ibm.com>", "Brian Duenas <Brian.Duenas@ibm.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "torch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
gt4sd-trainer-hf-pl = "^1.0.0"
#terminator = {path = "../../regression-transformer", optional = false}
terminator = {git =  "https://github.com/PhillipDowney/regression-transformer", rev = "gt4sd", optional = false}
pytoda = {git = "https://github.com/PhillipDowney/paccmann_datasets", rev = "1.1.3", optional = false}
# gt4sd_common = {path =  "../gt4sd_common/"}
gt4sd_common = { git = "https://github.com/acceleratedscience/Open-AD-Model-Service", subdirectory = "openad-model-inference/gt4sd_common", branch = "main" }

sentencepiece = "0.2.0"
#psutil = "^5.9.8"
psutil = "^5.9.8"
[tool.poetry.extras]


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.352"
python-lsp-server = {extras = ["all"], version = "^1.10.0"}
mols2grid = { version = "^2.0.0", optional = true}
torch = [
    { version = ">=1.7.1", source = "pypi", platform = "darwin" },
    { version = ">=1.7.1+cu118", source = "torch-cu118", platform = "linux" },
    { version = ">=1.7.1+cpu", source = "torch-cpu", platform = "win32" },
]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"