[tool.poetry]
name = "gt4sd_inference_paccmann"
version = "0.2.0"
license="MIT"
description = "gt4sd Inference for paccmannrl prediction"
authors = ["Daniel Choi <choi@ibm.com>", "Phil Downey <Phil.Downey1@ibm.com>", "Brian Duenas <Brian.Duenas@ibm.com>"]
readme = "README.md"



[tool.poetry.dependencies]
python = ">=3.9,<3.11"

reinvent-chemistry = "0.0.51"
tape-proteins = ">=0.5"

# gt4sd_common = { git = "https://github.com/acceleratedscience/Open-AD-Model-Service", subdirectory = "openad_model_inference/gt4sd_common", branch = "main" }
# gt4sd_inference_guacamol = { git = "https://github.com/acceleratedscience/Open-AD-Model-Service", subdirectory = "openad_model_inference/gt4sd_guacamol", branch = "main" }

toxsmi = {git = "https://github.com/PhillipDowney/chemical_representation_learning_for_toxicity_prediction", rev="0.0.3" , optional = false}
pytoda = { git = "https://github.com/PhillipDowney/paccmann_datasets" ,rev = "1.1.3",optional = false }

paccmann_chemistry = {git =  "https://github.com/PhillipDowney/paccmann_chemistry", rev = "0.0.4" , optional = false}
paccmann_generator = {git =  "https://github.com/PhillipDowney/paccmann_generator",rev = "0.0.2", optional = false}
paccmann_predictor = {git = "https://github.com/PhillipDowney/paccmann_predictor", rev = "0.0.2" ,optional = false}
paccmann_omics = {git =  "https://github.com/PaccMann/paccmann_omics" , optional = false}
paccmann_gp = {git = "https://github.com/PaccMann/paccmann_gp" , optional = false}
[tool.poetry.group.dev.dependencies]
pytest = "8.0.2"
pyright = "^1.1.352"
python-lsp-server = {extras = ["all"], version = "^1.10.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
